--- a/setup.cfg
+++ b/setup.cfg
@@ -53,17 +53,35 @@ package_dir =
 install_requires =
     pip >= 22
     setuptools >= 60
-    wheel >= 0.34
-    cookiecutter >= 1.0
-    tomli >= 2.0.0; python_version <= "3.10"
-    importlib_metadata>=4.4.0; python_version <= "3.9"
-    requests >= 2.22.0
-    GitPython >= 3.0.8
-    dmgbuild >= 1.3.3; sys_platform == "darwin"
-    psutil >= 5.9.0
-    rich >= 12.4.1
-    platformdirs >= 2.5.2
-    packaging >= 21.3
+    wheel ~= 0.34
+    cookiecutter ~= 2.1
+    tomli ~= 2.0; python_version <= "3.10"
+    importlib_metadata ~= 4.4; python_version <= "3.9"
+    requests ~= 2.22
+    GitPython ~= 3.1
+    dmgbuild ~= 1.4; sys_platform == "darwin"
+    psutil ~= 5.9
+    rich ~= 12.4
+    platformdirs ~= 2.5
+    packaging ~= 21.3
+
+[options.extras_require]
+dev =
+    pre-commit
+    setuptools_scm[toml] ~= 7.0
+    tox
+test =
+    pytest
+    pytest-tldr
+    pytest-cov
+    tomli_w
+docs =
+    sphinx
+    sphinxcontrib-spelling
+    pyenchant
+    sphinx-autobuild
+    sphinx_rtd_theme
+    sphinx_tabs
 
 [options.packages.find]
 where = src
