--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,17 +144,17 @@ jobs:
 #        os_name: ['macOS', 'windows', 'linux']
         os_name: ['windows']
         framework: ['toga']  #, 'pyside2', 'pyside6', 'ppb']
-#        include:
+        include:
 #        - os_name: macOS
 #          platform: macos-12
 #          briefcase-data-dir: ~/Library/Caches/org.beeware.briefcase
 #          pip-cache-dir: ~/Library/Caches/pip
 #          docker-cache-dir: ~/Library/Containers/com.docker.docker/Data/vms/0/
-#        - os_name: windows
-#          platform: windows-latest
-#          briefcase-data-dir: ~\AppData\Local\BeeWare\briefcase\Cache
-#          pip-cache-dir: ~\AppData\Local\pip\Cache
-#          docker-cache-dir: C:\ProgramData\DockerDesktop
+        - os_name: windows
+          platform: windows-latest
+          briefcase-data-dir: ~\AppData\Local\BeeWare\briefcase\Cache
+          pip-cache-dir: ~\AppData\Local\pip\Cache
+          docker-cache-dir: C:\ProgramData\DockerDesktop
 #        - os_name: linux
 #          # Need to use at least 22.04 to get the bugfix in flatpak for handling spaces in filenames.
 #          platform: ubuntu-22.04
