--- a/setup.cfg
+++ b/setup.cfg
@@ -112,6 +112,12 @@ where = src
 [options.entry_points]
 console_scripts =
     briefcase = briefcase.__main__:main
+briefcase.bootstraps =
+    Toga = briefcase.bootstraps.toga:TogaGuiBootstrap
+    PySide2 = briefcase.bootstraps.pyside2:PySide2GuiBootstrap
+    PySide6 = briefcase.bootstraps.pyside6:PySide6GuiBootstrap
+    PursuedPyBear = briefcase.bootstraps.pursuedpybear:PursuedPyBearGuiBootstrap
+    Pygame = briefcase.bootstraps.pygame:PygameGuiBootstrap
 briefcase.platforms =
     android = briefcase.platforms.android
     iOS = briefcase.platforms.iOS
