Remove special testing configuration from CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,8 +145,7 @@ jobs:
   verify-apps:
     name: Build app
     needs: unit-tests
-#    uses: beeware/.github/.github/workflows/app-build-verify.yml@main
-    uses: rmartin16/.github-beeware/.github/workflows/app-build-verify.yml@gui-plugin-support
+    uses: beeware/.github/.github/workflows/app-build-verify.yml@main
     with:
       # This *must* be the version of Python that is the system Python on the
       # Ubuntu version used to run Linux tests. We use a fixed ubuntu-22.04
@@ -156,8 +155,6 @@ jobs:
       python-version: "3.10"
       runner-os: ${{ matrix.runner-os }}
       framework: ${{ matrix.framework }}
-      briefcase-template-source: https://github.com/rmartin16/briefcase-template.git
-      briefcase-template-branch: gui-plugin-support
     strategy:
       fail-fast: false
       matrix:
