--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,12 +80,12 @@ dependencies = [
     # If the package uses calver, we don't pin the upper version, as the upper version
     # provides no basis for determining API stability.
     #
-    # See beeware/briefcase#1663 to bump <2.6.0 pin
-    "cookiecutter >= 2.3.1, < 2.6.0",
+    "cookiecutter >= 2.3.1, < 2.6.0",  # See beeware/briefcase#1663 to bump <2.6.0 pin
     "dmgbuild >= 1.6, < 2.0; sys_platform == 'darwin'",
     "GitPython >= 3.1, < 4.0",
     "platformdirs >= 2.6, < 5.0",
     "psutil >= 5.9, < 6.0",
+    "python-dateutil >= 2.9.0.post0",  # transitive dependency (beeware/briefcase#1428)
     "requests >= 2.28, < 3.0",
     "rich >= 12.6, < 14.0",
     "tomli >= 2.0, < 3.0; python_version <= '3.10'",
